css/rotating-card.css
.intro {
    width: 75%;
    max-width: 800px;
    margin: 20px auto;
}

.intro img {
    width: 100%;
}

.indicator-category {
    height: 65px;
    margin: 20px 0 10px 0;
}

.indicator-category.indA {
  /*background-color: #323F47;*/
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #323F47), color-stop(0.6, #222C32));
  background: -webkit-linear-gradient(top, #323F47 0%, #222C32 60%);
}

.indicator-category.indB { 
  /*background-color: #0E4D6F;*/
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #0E4D6F), color-stop(0.6, #1B3756));
  background: -webkit-linear-gradient(top, #0E4D6F 0%, #1B3756 60%);
}

.indicator-category.indC { 
  /*background-color: #133E47;*/
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #133E47), color-stop(0.6, #0E3138));
  background: -webkit-linear-gradient(top, #133E47 0%, #0E3138 60%);
}

.indicator-category .wrapper {
    padding: 10px 0 0 0;
}

.indicator-category h1 {
    clear: both;
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    font-size: 2.1em;
    text-decoration: none;
    text-shadow: 0 -1px 0 #000;
    color: #FFF;
    padding: 0px;
    margin: 5px 10px;
}

.btn:hover,
.btn:focus,
.btn:active{
    outline: 0 !important;
}
/* entire container, keeps perspective */
.card-container {
	  -webkit-perspective: 800px;
   -moz-perspective: 800px;
     -o-perspective: 800px;
        perspective: 800px;
        margin-bottom: 30px;
}
/* flip the pane when hovered */
.card-container:not(.manual-flip):hover .card,
.card-container.hover.manual-flip .card{
	-webkit-transform: rotateY( 180deg );
-moz-transform: rotateY( 180deg );
 -o-transform: rotateY( 180deg );
    transform: rotateY( 180deg );
}


.card-container.static:hover .card, 
.card-container.static.hover .card {
	-webkit-transform: none;
-moz-transform: none;
 -o-transform: none;
    transform: none;
}
/* flip speed goes here */
 .card {
	 -webkit-transition: -webkit-transform .5s;
   -moz-transition: -moz-transform .5s;
     -o-transition: -o-transform .5s;
        transition: transform .5s;
-webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
     -o-transform-style: preserve-3d;
        transform-style: preserve-3d;
	position: relative;
}

/* hide back of pane during swap */
.front, .back {
	-webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
     -o-backface-visibility: hidden;
        backface-visibility: hidden;
	position: absolute;
	top: 0;
	left: 0;
	background-color: #FFF;
}

/* front pane, placed above back */
.front {
	z-index: 2;
}

/* back, initially hidden pane */
.back {
		-webkit-transform: rotateY( 180deg );
   -moz-transform: rotateY( 180deg );
     -o-transform: rotateY( 180deg );
        transform: rotateY( 180deg );
        z-index: 3;
}

.back .btn-simple{
    position: absolute;
    left: 0;
    bottom: 4px;
}
/*        Style       */

.row.padded {
    margin-bottom: 4em;
}

.card{
    background: none repeat scroll 0 0 #FFFFFF;
    border-radius: 4px;
    color: #444444;
    min-height: 260px;
    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 1);
}
.card-container, .front, .back {
	width: 100%;
	height: 180px;
}

.card .cover{
    height: 125px;
    overflow: hidden;
    
    margin-bottom: 1em;
}

/*images for Indicator A */

.card .cover.disposable-income {
    background-image: url(/images/dis-inc-bg.png);
    background-size: 100% 125px;
}

.card .cover.job-car {
    background-image: url(/images/job-car-bg.png);
    background-size: 100% 125px;
}

.card .cover.job-transit {
    background-image: url(/images/job-train-bg.png);
    background-size: 100% 125px;
}

.card .cover.road-repair {
    background-image: url(/images/stat-rep-bg.png);
    background-size: 100% 125px;
}

/* Images for Indicator B*/


.card .cover.walk {
    background-image: url(/images/walk.png);
    background-size: 100% 125px;
}.card .cover.mode {
    background-image: url(/images/mode.png);
    background-size: 100% 125px;
}.card .cover.isolated {
    background-image: url(/images/isolated.png);
    background-size: 100% 125px;
}.card .cover.reliable {
    background-image: url(/images/reliable-transit.png);
    background-size: 100% 125px;
}

/* Images for Indicator C */


}.card .cover.land {
    background-image: url(/images/land.png);
    background-size: 100% 125px;
}
}.card .cover.pollution {
    background-image: url(/images/pollution.png);
    background-size: 100% 125px;
}
}.card .cover.commute {
    background-image: url(/images/commute.png);
    background-size: 100% 125px;
}
}.card .cover.congestion {
    background-image: url(/images/congestion.png);
    background-size: 100% 125px;
}

.wrapper.indA .cover img{
    border-bottom: 35px solid #323F47;
}

.wrapper.indB .cover img{
    border-bottom: 35px solid #0E4D6F;
}

.wrapper.indC .cover img{
    border-bottom: 35px solid #133E47;
}

.card .user{
    display: block;
    margin: 0 auto 0;
    overflow: hidden;
    width: 80px;
}
.card .user img{
    background: none repeat scroll 0 0 #FFFFFF;
    border: 4px solid #FFFFFF;
    width: 100%;
}

.card .content{
    background-color: rgba(0, 0, 0, 0);
    box-shadow: none;
    padding: 10px 20px 20px;
}
.card .content .main {
    min-height: 160px;
}
.card .back .content .main {
    height: 215px;
}

.card .back p {
    font-size: .7em;
    margin: 0;
}

.card .back h4 {
  margin: 5px 0;
}

.card .indicator {
    font-size: 20px;
    line-height: 20px;
    margin: 0 0 10px 0;
    text-align: center;
    text-transform: capitalize;
}
.card h5{
    margin: 5px 0;
    font-weight: 400;
    line-height: 20px;
}
.card .grade-title{
    color: #999999;
    text-align: center;
}

.card .grade {
    color: #999999;
    text-align: center;
    margin-bottom: 20px;
    font-size: 18px;
    font-weight: 700;
    line-height: .6em;
}

.card .footer {
    border-top: 1px solid #EEEEEE;
    color: #999999;
    margin: 30px 0 0;
    padding: 5px 0 0;
    text-align: center;
}
.card .footer .social-links{
    font-size: 18px;
}
.card .footer .social-links a{
    margin: 0 7px;
}
.card .footer .btn-simple{
    margin-top: -6px;
}
.card .header {
    padding: 5px 20px;
    height: 40px;
}

.card .back .content {
    height: 345px;
    padding: 3px 20px 20px;
}

.card .back .footer {
    margin: 0;
}

.card .motto{
    border-bottom: 1px solid #EEEEEE;
    color: #000000;
    font-size: 22px;
    font-weight: 700;
    padding-bottom: 10px;
    text-align: center;
}

.wrapper.indA .motto {
    color: #323F47;
}

.wrapper.indB .motto {
    color: #0E4D6F;
}
.wrapper.indC .motto {
    color: #133E47;
}

/*      Just for presentation        */

.title{
    color: #506A85;
    text-align: center;
    font-weight: 300;
    font-size: 44px;
    margin-bottom: 90px;
    line-height: 90%;
}
.title small{
    font-size: 17px;
    color: #999;
    text-transform: uppercase;
    margin: 0;
}

/*
.space-50{
    height: 50px;
    display: block;
}
.space-200{
    height: 200px;
    display: block;
}
.white-board{
    background-color: #FFFFFF;
    min-height: 200px;
    padding: 60px 60px 20px;
}
.ct-heart{
    color: #F74933;
}

 pre.prettyprint{
    background-color: #ffffff;
    border: 1px solid #999;
    margin-top: 20px;
    padding: 20px;
    text-align: left;
}
.atv, .str{
    color: #05AE0E;
}
.tag, .pln, .kwd{
     color: #3472F7;
}
.atn{
  color: #2C93FF;
}
.pln{
   color: #333;
}
.com{
    color: #999;
} 

.btn-simple{
    opacity: .8;
    color: #666666;
    background-color: transparent;
}

.btn-simple:hover,
.btn-simple:focus{
    background-color: transparent;
    box-shadow: none;
    opacity: 1;
}
.btn-simple i{
    font-size: 16px;
}

*/
/*       Fix bug for IE      */

@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
    .front, .back{
        -ms-backface-visibility: visible;    
        backface-visibility: visible;
    }
    
    .back {
        visibility: hidden;
        -ms-transition: all 0.2s cubic-bezier(.92,.01,.83,.67);
    }
    .front{
        z-index: 4;
    }
    .card-container:hover .back{
        z-index: 5;
        visibility: visible;
    }
}

